<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="show_overcast">показывать облачность</string>
    <string name="show_humidity">показывать влажность</string>
    <string name="bnt_back">Назад</string>
    <string name="btn_show_weather">Посмотреть погоду</string>
    <string name="more_details">Подробнее</string>
    <string name="history_temperature_title">История температуры</string>
    <string name="time">Время</string>
    <string name="empty_list">Empty list</string>
    <string name="temperature">Температура</string>
    <string name="input_city">Введите город</string>
    <string name="btn_add_city">Добавить</string>
    <string name="btn_add_city_no_text">Введите город для добавления в список!</string>
    <string name="btn_add_city_repeat_city">Введенный город уже есть в списоке!</string>
    <string name="btn_add_city_confirm">Точно хотите добавить новый город?</string>
    <string name="btn_add_city_complete">Город успешно добавлен!</string>
    <string name="title_info_about_developer">о разработчике</string>
    <string name="title_profession">Профессия</string>
    <string name="name_profession">Андроид разработчик</string>
    <string name="developer_full_name">Попов Иван</string>
    <string name="delete_city">Удалить город</string>
    <string name="api_key" translatable="false">293da20ad6da8e2bb2974cc9760fbf87</string>
    <string name="humidity">Влажность</string>
    <string name="choose_city">Москва</string>
    <string name="degree">℃</string>
    <string name="overcast">Облачность</string>
    <string name="city_not_found">Информация по данному городу не найдена!</string>

    <array name="name_city">

        <item>Москва</item>
        <item>Таганрог</item>
        <item>Ростов</item>
        <item>Краснодар</item>
        <item>Анапа</item>
        <item>Сочи</item>

    </array>

    <string-array name="url_city_weather">
        <item>https://www.gismeteo.ru/weather-moscow-4368/</item>
        <item>https://www.gismeteo.ru/weather-taganrog-5106/</item>
        <item>https://www.gismeteo.ru/weather-rostov-na-donu-5110/</item>
        <item>https://www.gismeteo.ru/weather-krasnodar-5136/</item>
        <item>https://www.gismeteo.ru/weather-anapa-5211/</item>
        <item>https://www.gismeteo.ru/weather-sochi-5233/</item>
    </string-array>

    <string-array name="overcast_array">
        <item>Перисто-кучевые</item>
        <item>Перистые</item>
        <item>Перисто-слоистые</item>
        <item>Высококучевые</item>
        <item>Слоисто-дождевые</item>
        <item>Слоистые</item>
    </string-array>

    <string-array name="humidity_array">
        <item>96%</item>
        <item>82%</item>
        <item>60%</item>
        <item>56%</item>
        <item>76%</item>
        <item>70%</item>
    </string-array>


    <string-array name="temperature_array">
        <item>-2</item>
        <item>+5</item>
        <item>+6</item>
        <item>+9</item>
        <item>+9</item>
        <item>+12</item>
    </string-array>

    <string-array name="temperature_array_history_time">
        <item>00:00</item>
        <item>03:00</item>
        <item>06:00</item>
        <item>09:00</item>
        <item>12:00</item>
        <item>15:00</item>
        <item>18:00</item>
        <item>21:00</item>
    </string-array>
    <string-array name="temperature_array_history">
        <item>-2</item>
        <item>-1</item>
        <item>+1</item>
        <item>+5</item>
        <item>+9</item>
        <item>+3</item>
        <item>-1</item>
        <item>-6</item>
    </string-array>


    <array name="icons_city">
        <item>@drawable/moscow</item>
        <item>@drawable/taganrog</item>
        <item>@drawable/rostov</item>
        <item>@drawable/krasnodar</item>
        <item>@drawable/anapa</item>
        <item>@drawable/sochi</item>
    </array>
</resources>
