<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/develop"
        style="@style/AboutDeveloper"
        android:layout_width="240dp"
        android:layout_height="248dp"
        android:src="@drawable/developer_photo"
        app:civ_border_color="#283CA8"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_profession"
        style="@style/AboutDeveloper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_profession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/name_profession"
        style="@style/AboutDeveloper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name_profession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_profession" />

    <TextView
        android:id="@+id/full_name"
        style="@style/AboutDeveloper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/developer_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/develop" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>